--- a/src/main/resources/com/rgga/converter/view/converter-view.fxml
+++ b/src/main/resources/com/rgga/converter/view/converter-view.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" stylesheets="@styles/application.css" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.rgga.converter.controller.ConverterController">
+<HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.rgga.converter.controller.ConverterController">
    <VBox prefHeight="720.0" prefWidth="640.0" style="-fx-background-color: #FEFEE3;" HBox.hgrow="ALWAYS">
       <Label prefHeight="17.0" prefWidth="674.0" text="CoinShift" textFill="#2c6e49">
          <VBox.margin>
@@ -21,7 +21,7 @@
          </font>
          <graphic>
             <ImageView fitHeight="15.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
-               <Image url="@view/images/icon%20-%20logo.png" />
+               <Image url="@images/icon%20-%20logo.png" />
             </ImageView>
          </graphic>
       </Label>
@@ -41,7 +41,7 @@
                   <Insets right="20.0" />
                </HBox.margin>
             </Label>
-            <ChoiceBox fx:id="SelectCoin" prefWidth="150.0" style="-fx-background-color: #2c6e49;" stylesheets="@styles/application.css" />
+            <ChoiceBox fx:id="SelectCoin" prefWidth="150.0" style="-fx-background-color: #2c6e49;" />
          </HBox>
          <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
             <Label text="D$" textFill="#2c6e49">
